2025-08-05  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.5

2025-07-28  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el (howm-view-filter-methods)
	(howm-view-filter-by-contents,howm-view-filter-by-keyword-in-contents)
	(howm-view-grep-in-contents, howm-view-grep-keyword-in-contents)
	(howm-view-actually-filter-by-keyword-in-contents)
	(howm-view-actually-filter-by-contents,howm-view-filter-by-contents-gen)
	(howm-rangeset-belong-p):
	"f contents RET" in summary buffer actually performs "filtering" now,
	breaking backward compatibility
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/issues/79

	* howm-view.el (howm-view-define-common-key)
	(howm-view-summary-mode, howm-view-contents-mode):
	bind "F" key to howm-view-actually-filter-by-contents in summary
	buffer, and "K" key to
	howm-view-actually-filter-by-keyword-in-contents instead of
	conventional howm-keyword-to-kill-ring for convenience
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/issues/79

	* howm-mode.el (howm-default-key-table): ditto

2025-07-28  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-misc.el (howm-auto-theme):
	fix too large font in summary buffer for howm-follow-theme
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/82

	* howm-vars.el (howm-auto-theme-custom-entries):
	add howm-auto-theme-custom-entries for howm-follow-theme
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/82

	* howm-misc.el (howm-auto-theme): ditto

2025-07-20  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el (howm-view-window-location, howm-view-close-frame/tab-on-exit)
	(riffle-summary, riffle-kill-buffer)
	(riffle-summary-doit, riffle-kill-buffer-doit)
	(riffle-initialize-frame, riffle-initialize-tab)
	(riffle-frame-alist, riffle-tab-name):
	add howm-view-window-location & howm-view-close-frame/tab-on-exit
	thx > Jack Baty san (@jackbaty), Mark Butala san (@butala),